# QiHD

./: .gitignore  LICENSE  MIGRATION.md  NOTICE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
check/: all  pytest-and-incremental-coverage  pytest-changed-files-and-incremental-coverage
examples/: boxqp_test.ipynb  lcqp_test.ipynb  miqp_test.ipynb
qihd/: __init__.py  miqp_solver.py  phi_miqp.py  response.py
qihd/backends/: __init__.py  backend.py  qihd.py
qihd/problems/: __init__.py  boxqp.py  lcqp.py  miqp.py  problem.py  qubo.py
qihd/refiners/: __init__.py  ipopt_minimize.py  jax_adam.py  pdqp.py  refiner.py  scipy_minimize.py
qihd/utils/: decoding_utils.py  file_utils.py  integrator.py  jax_utils.py
tests/: test_imports.py  test_solver_aliases.py
